...
"%d Items" = "%d Items";

/* No comment provided by engineer. */
"%d more" = "%d more";

/* No comment provided by engineer. */
"1 Item" = "1 Item";

/* No comment provided by engineer. */
"About" = "About";

/* No comment provided by engineer. */
"About put.io" = "About put.io";

/* No comment provided by engineer. */
"Account" = "Account";

/* No comment provided by engineer. */
"Amsterdam" = "Amsterdam";

/* No comment provided by engineer. */
"Ascending" = "Ascending";
...
"Choose new location for %d files" = "Choose new location for %d files";

/* No comment provided by engineer. */
"Choose new location for 1 file" = "Choose new location for 1 file";

/* No comment provided by engineer. */
"Choose your proxy" = "Choose your proxy";

/* No comment provided by engineer. */
"Chromecast video playback type" = "Chromecast video playback type";

/* No comment provided by engineer. */
"Cleaning up..." = "Cleaning up...";
...
"Connected!" = "Connected!";

/* No comment provided by engineer. */
"Contact us" = "Contact us";

/* No comment provided by engineer. */
"Continue watching" = "Continue watching";

/* No comment provided by engineer. */
"Convert and Download" = "Convert and Download";

/* No comment provided by engineer. */
"Converting..." = "Converting...";
...
"Date Added" = "Date Added";

/* No comment provided by engineer. */
"Date Modified" = "Date Modified";

/* No comment provided by engineer. */
"Default sort option for files" = "Default sort option for files";

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
"Delete %d Downloads?" = "Delete %d Downloads?";

/* No comment provided by engineer. */
"Delete %d selected downloads" = "Delete %d selected downloads";
...

/* No comment provided by engineer. */
"Downloading... %@" = "Downloading... %@";
"Download failed. Tap to retry." = "Download failed. Tap to retry.";
"Unable to start download. Tap to retry." = "Unable to start download. Tap to retry.";
"Choose how many offline downloads can run at once." = "Choose how many offline downloads can run at once.";
"Simultaneous downloads" = "Simultaneous downloads";
"%d at a time" = "%d at a time";

/* No comment provided by engineer. */
"Double tap to open this download." = "Double tap to open this download.";

/* No comment provided by engineer. */
"Double tap to retry this download." = "Double tap to retry this download.";

/* No comment provided by engineer. */
"Double tap to stop this download." = "Double tap to stop this download.";

/* No comment provided by engineer. */
"Downloads" = "Downloads";

/* No comment provided by engineer. */
"Downloads tutorial" = "Downloads tutorial";

/* No comment provided by engineer. */
"Double tap to deselect this download." = "Double tap to deselect this download.";
...
"Playback position" = "Playback position";

/* No comment provided by engineer. */
"Playback Speed" = "Playback Speed";

/* No comment provided by engineer. */
"Playback speed" = "Playback speed";

/* No comment provided by engineer. */
"Please check your code and try again." = "Please check your code and try again.";

/* No comment provided by engineer. */
"Please check your credentials and try again." = "Please check your credentials and try again.";
...
"Select" = "Select";

/* No comment provided by engineer. */
"Select All" = "Select All";

/* No comment provided by engineer. */
"Select Items" = "Select Items";

/* No comment provided by engineer. */
"Select completed downloads" = "Select completed downloads";

/* No comment provided by engineer. */
"Selected" = "Selected";

/* No comment provided by engineer. */
"Not selected" = "Not selected";
...
"Today" = "Today";

/* No comment provided by engineer. */
"Trash" = "Trash";

/* No comment provided by engineer. */
"Two-factor authentication" = "Two-factor authentication";

/* No comment provided by engineer. */
"Type" = "Type";

/* No comment provided by engineer. */
"Unsupported File" = "Unsupported File";
...
"We had to delete %@ per your instructions, since there wasn't enough free space." = "We had to delete %@ per your instructions, since there wasn't enough free space.";

/* No comment provided by engineer. */
"We're unable to show this kind of file in the app yet." = "We're unable to show this kind of file in the app yet.";

/* No comment provided by engineer. */
"Where would you like to start?" = "Where would you like to start?";

/* No comment provided by engineer. */
"Where you are logged in" = "Where you are logged in";

/* No comment provided by engineer. */
"Yes, empty trash" = "Yes, empty trash";
...
